# laralsp

./: Cargo.toml  README.md  TODO.md
src/: buffer.rs  document_state.rs  lib.rs  main.rs
src/actions/: completion.rs  mod.rs  snippets.rs
src/laravel/: mod.rs  project_config.rs  routes.rs  tables.rs
src/types/: languages.rs
testfiles/: routes.php
